PiCenter Changelog


1.0.00a

Build 100117
    Fixed bug that caused CSV file rows to be interlaced with blank lines.
    Added /data/backup endpoint.

12/01/2019
Build 100116
    Added loading modal.
    Added download csv.

11/30/2019
Build 100115
    Change UI color scheme.
    Add react-bootstrap.

11/30/2019
Build 100114
    Add entity cvs parsers.
    Add data/csv endpoint.

11/29/2019
Build 100113
    Fix Create User Page bugs.

11/24/2019
Build 100112
    Add Create User Page.

11/23/2019
Build 100111
    Wrap login input in form.

11/16/2019
Build 100110
    Edit documents.
    Styling.
    First production build.

11/13/2019
Build 100109
    Added Bugs.txt.
    Added GNU AGPL license.
    Fixed logout bugs.
    Added styling.

11/12/2019
Build 100108
    Added summary ui page.
    Added initial sass styling.

11/10/2017
Build 100107
    Invalidate user on http session expiration.
    Added room constants.
    Added summary Service.
    Added summary service test.
    Added truncate table methods to repositories.
    Added /summary rest controller endpoint.

11/08/2019
Build 100106
    Finished login impl.

11/03/2019
Build 100105
    Added ui logonpage tests.

11/02/2019
Build 100104
    Added restuser bean.
    Added getrestuser to userservice.
    Added "/" mapping to main rest controller.
    Added logon form to ui.

10/27/2019
Build 100103
    Working socket server impl.

10/13/2019
Build 100102
    Impl AppUser Table.
    Impl. Reading Table.
    Impl. UserLog Table.
    Started UserSession Impl.
    Added appUser_userSession join table.

10/05/2019
Build 100101
    Initial MySQL Impl.